Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3275

sanity-scrub.sh test_11: osd_seq_load() ASSERTION( map->om_root ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 8112

      I'm able to consistently hit this failure when running sanity-scrub.sh. This was hit on a variety of builds in the past week, though I am using about a dozen patches, which have some non-zero chance to be causing problems.

      May  5 01:42:54 sookie-gig kernel: OI_scrub      D 0000000000000001     0 24766      2 0x00000000
      May  5 01:42:54 sookie-gig kernel: Call Trace:
      May  5 01:42:54 sookie-gig kernel: [<ffffffff81060250>] ? default_wake_function+0x0/0x20
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0775f3d>] lbug_with_loc+0x7d/0xb0 [libcfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0ed6c90>] osd_seq_load+0x480/0xb90 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0e6c56c>] ? ldiskfs_xattr_get+0x10c/0x330 [ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0ed73e8>] osd_obj_spec_lookup+0x48/0x300 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0ec8cc9>] osd_oi_lookup+0xe9/0x140 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0ede114>] osd_scrub_exec+0x1c4/0xf70 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0edfc72>] ? osd_scrub_next+0x142/0x4b0 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0e38aa2>] ? ldiskfs_read_inode_bitmap+0x172/0x2c0 [ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0ed947f>] osd_inode_iteration+0x1cf/0x570 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0eddf50>] ? osd_scrub_exec+0x0/0xf70 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0edfb30>] ? osd_scrub_next+0x0/0x4b0 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0edb93d>] osd_scrub_main+0x4bd/0xc70 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffff810097cc>] ? __switch_to+0x1ac/0x320
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0edb480>] ? osd_scrub_main+0x0/0xc70 [osd_ldiskfs]
      May  5 01:42:54 sookie-gig kernel: [<ffffffff8100c14a>] child_rip+0xa/0x20
      May  5 01:42:54 sookie-gig kernel: [<ffffffffa0edb480>] ? osd_scrub_main+0x0/0xc70 [osd_ldiskfs]
      

            yong.fan nasf (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: